# odoo_tools

./: .gitignore  Cargo.toml  LICENSE  build.rs  build_ios.sh  build_ios_non_release.sh  build_x64_swift.sh  cbindgen.toml  rustfmt.toml
examples/: gui.rs
src/: error.rs  lib.rs  main.rs  odoo_const.rs
src/api/: hr.rs  invoice.rs  master.rs  mod.rs
src/cfg/: args.rs  mod.rs  validator.rs
src/rosrust/: client.rs  mod.rs
