[package]
name = "odoo_tools"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "odoo_tools"

[lib]
name = "odoo_tools"
crate-type = ["staticlib"]

[dependencies]
clap = "2.33.3"
xmlrpc = "0.14.0"
reqwest = "0.9.21"
iso8601 = "0.3.0"
chrono = "0.4.19"
serde = "1.0.120"
serde_json = "1.0.0"
serde_derive = "1.0.121"
futures = "0.3"

[build-dependencies]
cbindgen = "0.12"